[gd_scene load_steps=8 format=3 uid="uid://bjaj8aln7f08r"]

[ext_resource type="Theme" uid="uid://jddhsc4auo55" path="res://visuals/amber_cherryblossom.tres" id="1_nb6ej"]
[ext_resource type="Script" path="res://src/editor.gd" id="1_r2t7d"]
[ext_resource type="PackedScene" uid="uid://bl3r0kwwycrmw" path="res://src/page.tscn" id="2_kbraj"]
[ext_resource type="Script" path="res://src/LineTypeButton.gd" id="3_2h0gj"]
[ext_resource type="PackedScene" uid="uid://cp0ob2ul8hv0n" path="res://src/header_popup.tscn" id="5_k116e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1frgx"]
bg_color = Color(0.984314, 0.882353, 0.960784, 0.254902)
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.847059, 0, 0.631373, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_bik72"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_1frgx")

[node name="Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nb6ej")
script = ExtResource("1_r2t7d")

[node name="Core" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileControl" type="HBoxContainer" parent="Core"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 37.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Core/FileControl"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Core/FileControl/MarginContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="Core/FileControl/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "save"

[node name="OpenButton" type="Button" parent="Core/FileControl/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "open"

[node name="MarginContainer2" type="MarginContainer" parent="Core/FileControl"]
layout_mode = 2
size_flags_horizontal = 10

[node name="EditHeaderButton" type="Button" parent="Core/FileControl/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "edit header"

[node name="PageControl" type="HBoxContainer" parent="Core"]
layout_mode = 2
offset_top = 41.0
offset_right = 512.0
offset_bottom = 113.0
grow_horizontal = 2

[node name="PageNav" type="HBoxContainer" parent="Core/PageControl"]
layout_mode = 2

[node name="PanelContainer" type="MarginContainer" parent="Core/PageControl/PageNav"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_bik72")

[node name="HBoxContainer" type="HBoxContainer" parent="Core/PageControl/PageNav/PanelContainer"]
layout_mode = 2

[node name="LastVisited" type="Button" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
text = "backward"

[node name="NextVisited" type="Button" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 0
text = "forward"

[node name="First" type="Button" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "|<"

[node name="Prev" type="Button" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "<"

[node name="PageCount" type="VBoxContainer" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer/PageCount"]
layout_mode = 2

[node name="ChangePageButton" type="Button" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer/PageCount/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "jump"

[node name="PageCountCurrent" type="Label" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer/PageCount/HBoxContainer"]
layout_mode = 2
text = "40"
horizontal_alignment = 1

[node name="PageCountSpinCounter" type="SpinBox" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer/PageCount/HBoxContainer"]
layout_mode = 2
update_on_text_changed = true
select_all_on_focus = true

[node name="PageCountMax" type="Label" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer/PageCount"]
layout_mode = 2
text = "200"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = ">"

[node name="Last" type="Button" parent="Core/PageControl/PageNav/PanelContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = ">|"

[node name="JumpContainer" type="MarginContainer" parent="Core/PageControl/PageNav"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Core/PageControl/PageNav/JumpContainer"]
layout_mode = 2

[node name="AddAfter" type="Button" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "+>"

[node name="Positional" type="VBoxContainer" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer"]
layout_mode = 2

[node name="AddLast" type="Button" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer/Positional"]
layout_mode = 2
text = "+>>"

[node name="DeleteCurrent" type="Button" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer/Positional"]
layout_mode = 2
focus_mode = 0
text = "-"

[node name="VSeparator" type="VSeparator" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer"]
layout_mode = 2

[node name="LineTypes" type="HBoxContainer" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer"]
layout_mode = 2

[node name="TypeText" type="Button" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer/LineTypes"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Text"
script = ExtResource("3_2h0gj")

[node name="TypeChoice" type="Button" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer/LineTypes"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Choice"
script = ExtResource("3_2h0gj")
line_type = 1

[node name="TypeInstruction" type="Button" parent="Core/PageControl/PageNav/JumpContainer/HBoxContainer/LineTypes"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Instr"
script = ExtResource("3_2h0gj")
line_type = 2

[node name="PageContainer" type="MarginContainer" parent="Core"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.218
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -8.26401
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2

[node name="Page" parent="Core/PageContainer" instance=ExtResource("2_kbraj")]
layout_mode = 2

[node name="FDSave" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(827, 377)
access = 2
filters = PackedStringArray("*.json")

[node name="FDOpen" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(827, 377)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="HeaderPopup" parent="." instance=ExtResource("5_k116e")]
visible = false
content_scale_aspect = 1

[connection signal="pressed" from="Core/FileControl/MarginContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Core/FileControl/MarginContainer/HBoxContainer/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="Core/FileControl/MarginContainer2/EditHeaderButton" to="." method="_on_edit_header_button_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/PanelContainer/HBoxContainer/LastVisited" to="." method="_on_last_visited_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/PanelContainer/HBoxContainer/NextVisited" to="." method="_on_next_visited_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/PanelContainer/HBoxContainer/First" to="." method="_on_first_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/PanelContainer/HBoxContainer/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/PanelContainer/HBoxContainer/PageCount/HBoxContainer/ChangePageButton" to="." method="_on_change_page_button_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/PanelContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/PanelContainer/HBoxContainer/Last" to="." method="_on_last_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/JumpContainer/HBoxContainer/AddAfter" to="." method="_on_add_after_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/JumpContainer/HBoxContainer/Positional/AddLast" to="." method="_on_add_last_pressed"]
[connection signal="pressed" from="Core/PageControl/PageNav/JumpContainer/HBoxContainer/Positional/DeleteCurrent" to="." method="_on_delete_current_pressed"]
[connection signal="file_selected" from="FDSave" to="." method="_on_fd_save_file_selected"]
[connection signal="file_selected" from="FDOpen" to="." method="_on_fd_open_file_selected"]
